--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>画像オセロゲーム</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <div id="settingsScreen" class="screen">
@@ -32,6 +32,6 @@
         <div id="imageOverlay" style="display: none;"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
