--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div id="currentPlayerDisc" class="disc"></div>
             <span>の番です</span>
         </div>
-        <div id="board"></div>
+        <div id="board">
+
+        </div>
         <div id="controls">
         <!-- index.html のcontrols divを修正 -->
             <button id="showImageBtn" style="display: none;">問題表示</button>
