chore: 細かい文言修正

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Othe-riddle</title>
+    <title>◯◯◯-リドル</title>
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <div id="settingsScreen" class="screen">
-        <h2>オセロゲーム設定</h2>
+        <h2>ゲーム設定</h2>
         <div class="settings-group">
             <label>盤面サイズを選択</label>
             <select id="boardSize">
